--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,8 +3,11 @@
     <string-array name="xposedscope">
         <item>org.telegram.messenger</item>
         <item>org.telegram.messenger.web</item>
+        <item>org.telegram.messenger.beta</item>
         <item>nekox.messenger</item>
         <item>tw.nekomimi.nekogram</item>
         <item>org.telegram.plus</item>
+        <item>com.iMe.android</item>
+        <item>org.telegram.BifToGram</item>
     </string-array>
 </resources>
