Add more apps support

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,8 +6,12 @@
         <item>org.telegram.messenger.beta</item>
         <item>nekox.messenger</item>
         <item>tw.nekomimi.nekogram</item>
+        <item>com.cool2645.nekolite</item>
         <item>org.telegram.plus</item>
         <item>com.iMe.android</item>
         <item>org.telegram.BifToGram</item>
+        <item>ua.itaysonlab.messenger</item>
+        <item>org.forkclient.messenger.beta</item>
+        <item>org.aka.messenger</item>
     </string-array>
 </resources>
