--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,5 +13,6 @@
         <item>org.forkclient.messenger.beta</item>
         <item>org.aka.messenger</item>
         <item>ellipi.messenger</item>
+        <item>ir.ilmili.telegraph</item>
     </string-array>
 </resources>
