Cleaner code, added hooks fixing adblock/forwarding on other clients, updated clients list

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,7 +4,6 @@
         <item>org.telegram.messenger</item>
         <item>org.telegram.messenger.web</item>
         <item>org.telegram.messenger.beta</item>
-        <item>tw.nekomimi.nekogram</item>
         <item>nekox.messenger</item>
         <item>org.forkclient.messenger</item>
         <item>org.forkclient.messenger.beta</item>
@@ -13,9 +12,9 @@
         <item>org.telegram.mdgram</item>
         <item>org.telegram.mdgramyou</item>
         <item>org.telegram.BifToGram</item>
-        <item>it.owlgram.android</item>
         <item>ua.itaysonlab.messenger</item>
         <item>org.nift4.catox</item>
+        <item>top.qwq2333.nullgram</item>
         <item>com.cool2645.nekolite</item>
         <item>me.ninjagram.messenger</item>
         <item>org.ninjagram.messenger</item>
