Add it.belloworld.mercurygram support

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -23,5 +23,7 @@
         <item>com.iMe.android</item>
         <item>org.aka.messenger</item>
         <item>ellipi.messenger</item>
+	<item>it.belloworld.mercurygram</item>
+
     </string-array>
 </resources>
